--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -61,7 +61,7 @@ jobs:
       if: env.DEBUG_DEPLOY == 'false'
       run: |
         repoandorg=${{ github.repository }}
-        REPO=$(basename "$REPOANDORG")
+        REPO=$(basename "$repoandorg")
         echo REPO $REPO
 
         DATESTAMP=$(date +%Y%m%d-%H%M)
