--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -58,7 +58,7 @@ jobs:
     # if oc secrets provided
     - name: calculateImageTag
       id: calculateImageTag
-      if: env.DEBUG_DEPLOY == 'false'
+      if: env.DEBUG_DEPLOY == 'true'
       run: |
         repoandorg=${{ github.repository }}
         REPO=$(basename "$repoandorg")
