gha prod deploy

--- a/.github/workflows/deploy_prod.yaml
+++ b/.github/workflows/deploy_prod.yaml
@@ -145,6 +145,6 @@ jobs:
 
     # Configure Kong route
     - name: Kong config
-      id: proddeploy
+      id: prodRouteDeploy
       run: |
          echo not enabled atm
