gha prod deploy test

--- a/.github/workflows/deploy_prod.yaml
+++ b/.github/workflows/deploy_prod.yaml
@@ -22,7 +22,7 @@ jobs:
   deployprod:
 
     # Commented out for testing
-    if: github.event.pull_request.merged == true
+    #if: github.event.pull_request.merged == true
     defaults:
       run:
         shell: bash
