--- a/gwa/gwa-config-demo.yaml
+++ b/gwa/gwa-config-demo.yaml
@@ -1,22 +1,22 @@
-_format_version: '1.1'
 services:
 - name: smk-fap-fcb-svc
-  plugins: []
+  host: smk-fap-fcb-svc.b16795-dev.svc
+  port: 8888
+  tags:
+  - ns.smk-apps.smk-fap-fcb
+  - smk-fap-fcb
+  - dev
   routes:
-  - hosts:
-    - smk-fap-fcb
+  - name: smk-fap-fcb-route
+    hosts: 
+    - smk-fap-fcb.api.gov.bc.ca
     methods:
     - GET
-    name: smk-fap-fcb-kong-route
     paths:
     - /
     strip_path: false
     tags:
     - OAS3_import
-    - ns.smk-apps
-  tags:
-  - OAS3_import
-  - ns.smk-apps
-  host: smk-fap-fcb-svc.b16795-dev.svc
-  port: 8888
+    - ns.smk-apps.smk-fap-fcb
+
   
