--- a/.github/workflows/deploy_dev.yaml
+++ b/.github/workflows/deploy_dev.yaml
@@ -291,7 +291,7 @@ jobs:
       id: addDevVanityUrlToIssue
       if: env.RUN_GWA == 'true' && env.OPENSHIFT_SERVER_URL != '' && env.OPENSHIFT_TOKEN_DEV != ''
       run: |
-        ISSUE_URL=${{ steps.updateissue.outputs.ISSUE_URL }}
+        ISSUE_URL=${{ steps.updateissue.outputs.ISSUE_URL }}/comments
         VANITY_URL=${{ steps.kongconf.outputs.VANITY_URL }}
         REPONAME=${{ steps.retrieveimagetag.outputs.REPONAME }}
         MENTION_STRING=$(echo $MENTIONS | jq -rc 'map("@" + .) | .[]' | tr '\n' ',' | sed 's/, */, /g' |  sed 's/, *$//g')
